@@ -1374,6 +1374,13 @@ ReturnStmt::ReturnStmt(ExprPtr arg_e) : ExprStmt(STMT_RETURN, std::move(arg_e)) 
     }
 
     else {
+        // Hooks returning a value does nothing, but it's necessary to allow
+        // since they yield a boolean. This should be an error.
+        if ( ft->Flavor() == FUNC_FLAVOR_HOOK )
+            Warn(
+                "Remove in v9.1: Returning values from a hook is deprecated. Consider using 'break' to inhibit "
+                "lower-priority hooks, otherwise use an empty return if necessary.");
+
         auto promoted_e = check_and_promote_expr(e, yt);
 
         if ( promoted_e )
