@@ -1,0 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+warning in <...>/hook-return-fail.zeek, line 8: Remove in v9.1: Returning values from a hook is deprecated. Consider using 'break' to inhibit lower-priority hooks, otherwise use an empty return if necessary. (return (1))
+error in bool and <...>/hook-return-fail.zeek, line 8: arithmetic mixed with non-arithmetic (bool and 1)
+warning in <...>/hook-return-fail.zeek, line 15: Remove in v9.1: Returning values from a hook is deprecated. Consider using 'break' to inhibit lower-priority hooks, otherwise use an empty return if necessary. (return (T))
