@@ -1,7 +1,5 @@
 ### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 myhook, &priority=10, [a=1156, b=hello world]
-myhook return F
-myhook return T
 myhook, &priority=5, [a=37, b=goobye world]
 F
 T
@@ -14,8 +12,6 @@ myhook4, 2
 myhook4, 1
 myhook4 all handlers ran
 myhook, &priority=10, [a=2, b=it works]
-myhook return F
-myhook return T
 myhook, &priority=5, [a=37, b=goobye world]
 F
 myhook5, test
